syntax = "proto3";
package certusone.wormholechain.wormhole;

option go_package = "github.com/certusone/wormhole-chain/x/wormhole/types";

message EventGuardianSetUpdate{
  uint32 old_index = 1;
  uint32 new_index = 2;
}